datos de perfil

--- a/src/app/module-curriculo/components/targeta/centro-inferior/centro-inferior.component.html
+++ b/src/app/module-curriculo/components/targeta/centro-inferior/centro-inferior.component.html
@@ -2,18 +2,25 @@
   <div class="skills">
       <div class="banner">Skills</div>
       <ul>
-          <!-- <li>Angular <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="5"  color="#1F497D" ></ngx-stars></li>
-          <li>Java <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="4.5"  color="#1F497D" ></ngx-stars></li>
-          <li>Azure Devops <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="4"  color="#1F497D" ></ngx-stars></li>
-          <li>AWS <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="3"  color="#1F497D" ></ngx-stars></li>
-          <li>Javascript <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="4"  color="#1F497D" ></ngx-stars></li> -->
+          <li>Angular 
+            <!-- <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="5"  color="#1F497D" ></ngx-stars></li> -->
+          <li>Java 
+            <!-- <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="4.5"  color="#1F497D" ></ngx-stars></li> -->
+          <li>Azure Devops 
+            <!-- <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="4"  color="#1F497D" ></ngx-stars></li> -->
+          <li>AWS 
+            <!-- <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="3"  color="#1F497D" ></ngx-stars></li> -->
+          <li>Javascript 
+            <!-- <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="4"  color="#1F497D" ></ngx-stars></li> -->
       </ul>
   </div>
   <div class="idiomas">
       <div class="banner">Idiomas</div>
       <ul>
-          <!-- <li>Inglés <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="5"  color="#1F497D" ></ngx-stars></li>
-          <li>Español <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="5"  color="#1F497D" ></ngx-stars></li> -->
+          <li>Inglés 
+            <!-- <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="5"  color="#1F497D" ></ngx-stars></li> -->
+          <li>Español 
+            <!-- <ngx-stars [readonly]="true" [size]="1.5" [initialStars]="5"  color="#1F497D" ></ngx-stars></li> -->
       </ul>
   </div>
   <div class="educacion">
