--- a/src/app/module-curriculo/components/targeta/centro-superior/centro-superior.component.html
+++ b/src/app/module-curriculo/components/targeta/centro-superior/centro-superior.component.html
@@ -4,7 +4,7 @@
     <div>
         <p>
             May, 2019-Present
-            <span>(Medellín Colombia)</span>
+            <span>(La Habana Cuba)</span>
         </p>
     </div>
     <div>
@@ -41,7 +41,7 @@
     <div>
         <p>
             May, 2019-Present
-            <span>(Medellín Colombia)</span>
+            <span>(La Habana Cuba)</span>
         </p>
     </div>
     <div>
@@ -61,7 +61,7 @@
     <div>
         <p>
             May, 2019-Present
-            <span>(Medellín Colombia)</span>
+            <span>(La Habana Cuba)</span>
         </p>
     </div>
     <div>
