--- a/src/app/module-curriculo/components/targeta/lateral/lateral.component.html
+++ b/src/app/module-curriculo/components/targeta/lateral/lateral.component.html
@@ -17,7 +17,7 @@
       <ul>
           <li> 310000000</li>
           <li> vmanuelpm97@gmail.com </li>
-          <li> Medellín - Colombia </li>
+          <li> La Habana - Cuba </li>
       </ul>
   </div>
   
