--- a/src/app/module-curriculo/pages/agregar/agregar.component.html
+++ b/src/app/module-curriculo/pages/agregar/agregar.component.html
@@ -1,102 +1,138 @@
- <div>
-  
- </div>
- <div class="container" >
-      <h1 > Datos del currículo </h1>
-        <mat-divider></mat-divider>
+<h2 align="center"> Datos del Currículo </h2>
+<mat-horizontal-stepper [linear]="isLinear" #stepper labelPosition="bottom">
+  <mat-step [stepControl]="formNameGroup" label="Datos Personales" >
+    <div style="padding-top: 3%;">
+        <form [formGroup]="formNameGroup">
+            <!-- <ng-template matStepLabel>Name</ng-template> -->
+            <div class="example-form">
 
-  </div>
-<div fxLayout="column" 
-      fxLayoutGap="20px"   >
+              <div>
 
-     <div class="example-form" fxFlex="100" >
-        <mat-list-item role="listitem">Perfil:</mat-list-item>
+                <mat-form-field class="example-full-width">
+                  <input matInput placeholder="Nombre" required formControlName="userName">
+                  <mat-error *ngIf="formNameGroup.controls['userName'].hasError('required')">
+                          Username is required!
+                      </mat-error>
+                </mat-form-field>
+              </div>
 
-        <mat-form-field class="example-chip-list" appearance="fill">
-          <mat-label>Caracteristicaa Principales</mat-label>
-          <mat-chip-list #chipList aria-label="Fruit selection">
-            <mat-chip *ngFor="let fruit of fruits" (removed)="remove(fruit)">
-              {{fruit.name}}
-              <button matChipRemove>
-                <mat-icon>cancel</mat-icon>
-              </button>
-            </mat-chip>
-            <input placeholder="Agregar..."
-                   [matChipInputFor]="chipList"
-                   [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                   [matChipInputAddOnBlur]="addOnBlur"
-                   (matChipInputTokenEnd)="add($event)">
-          </mat-chip-list>
-        </mat-form-field>
+              <div class="contenedor">
 
+                <mat-form-field class="contenedor" appearance="fill">
+                  <mat-label>Género</mat-label>
+                  <mat-select [(ngModel)]="selectedValue" name="genero" formControlName="userGenero">
+                    <mat-option *ngFor="let genero of generos" [value]="genero.value">
+                      {{genero.viewValue}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <!-- <p> Selected genero: {{selectedValue}} </p> -->
+
+                <mat-form-field class="contenedor"
+                                appearance="fill">
+                  <mat-label>Seleccione</mat-label>
+                  <mat-select required 
+                              formControlName="userPiel">
+                    <mat-option value="option1">Negro</mat-option>
+                    <mat-option value="option3">Blanco</mat-option>
+                    <mat-option value="option3">Mestizo</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+
+              <mat-form-field class="example-full-width">
+                <input matInput placeholder="Dirección Particular" required formControlName="userDireccion">
+                <mat-error *ngIf="formNameGroup.controls['userDireccion'].hasError('required')">
+                        Username is required!
+                    </mat-error>
+              </mat-form-field>
+              <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Otros aspectos que desée agregar...</mat-label>
+                <textarea matInput 
+                          placeholder="Escriba..."
+                          required
+                          formControlName="userDireccion"></textarea>
+              </mat-form-field>
+            </div>
+            <br/>
+            <button mat-raised-button color="primary" matStepperNext>Next</button>
+        </form>
     </div>
+  </mat-step>
 
-     <div class="example-form" fxFlex="100" >
-        <mat-list-item role="listitem">Educación:</mat-list-item>
-        <mat-form-field class="example-full-width" >
-            <mat-label>Escriba...</mat-label>
-            <textarea matInput 
-                      placeholder="Aqui usted escribirá sus titulos,diplomas o carrera de graduado, centro de estudios..."
-                      [(ngModel)]="curriculo.educacion"></textarea>
-          </mat-form-field>
+  <mat-step [stepControl]="formPasswordGroup" label="Formación" >
+    <div style="padding-top: 3%;">
+        <form [formGroup]="formPasswordGroup">
+            <!-- <ng-template matStepLabel>Name</ng-template> -->
+            <div class="example-form">
+              <mat-form-field class="example-full-width">
+                <input type="password" matInput placeholder="Password" required formControlName="passWord">
+                <mat-error *ngIf="formPasswordGroup.controls['passWord'].hasError('required')">
+                        Password is required!
+                    </mat-error>
+              </mat-form-field>
+            </div>
+            <br/>
+            <button mat-raised-button color="primary" matStepperPrevious>Back</button> &nbsp; &nbsp;
+            <button mat-raised-button color="primary" matStepperNext>Next</button>
+        </form>
     </div>
+  </mat-step>
 
-     <div class="example-form" fxFlex="100" >
-        <mat-list-item role="listitem">Experiencia Laboral:</mat-list-item>
-        <mat-form-field class="example-full-width" >
-            <mat-label>Escriba...</mat-label>
-            <textarea matInput placeholder="Aqui usted escribirá su exeriencia laboral..."
-            [(ngModel)]="curriculo.experiencialaboral"></textarea>
-          </mat-form-field>
+  <mat-step [stepControl]="formEmailGroup" label="Experiencia Laboral" >
+    <div style="padding-top: 3%;">
+        <form [formGroup]="formEmailGroup">
+            <!-- <ng-template matStepLabel>Name</ng-template> -->
+            <div class="example-form">
+              <mat-form-field class="example-full-width">
+                <input type="text" matInput placeholder="Email" required formControlName="emailID">
+                <mat-error *ngIf="formEmailGroup.controls['emailID'].hasError('required')">
+                        Email is required!
+                    </mat-error>
+                <mat-error *ngIf="formEmailGroup.controls['emailID'].hasError('email')">
+                    Email is not Valid!
+                </mat-error>
+              </mat-form-field>
+            </div>
+            <br/>
+            <button mat-raised-button color="primary" matStepperPrevious>Back</button> &nbsp; &nbsp;
+            <button mat-raised-button color="primary" matStepperNext>Next</button>
+        </form>
     </div>
-     <div   class="example-form" 
-            fxFlex="100" >
-            <mat-list-item role="listitem">Contacto:</mat-list-item>
-          <div  class="example-container"
-                fxLayoutGap="20px"  
-                >
-            <mat-form-field >
-              <mat-label>Escriba su correo</mat-label>
-               <input   matInput 
-                       placeholder="correo@ejemplo.cu" 
-                       type="email"
-                       [(ngModel)]="curriculo.correo">
-              <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
-            </mat-form-field>
-            <mat-form-field >
-              <mat-label>Entre su Telefono</mat-label>
-              <input   matInput 
-                       placeholder="correo@ejemplo.cu" 
-                       type="text"
-                       [(ngModel)]="curriculo.telefono">
-              <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
-            </mat-form-field>
-          </div>
-          <div  fxLayout
-                class="example-button-container"
-                fxLayout.xs="column">
+  </mat-step>
 
-                <button mat-raised-button
-                  color="primary"
-                  (click)="guardar()" >
-                  <mat-icon>edit</mat-icon>
-                  Guardar
-                </button>
-
-                <span class="spacer"></span>
-
-                <button *ngIf="curriculo.id"
-                        mat-raised-button 
-                        color="warn"
-                        (click)="borrar()">
-                  <mat-icon>delete_outline</mat-icon>
-                  Borrar
-                </button>
-
-            
-                        
-          </div>
+  <mat-step [stepControl]="formPhoneGroup" label="Contactos" >
+    <div style="padding-top: 3%;">
+        <form [formGroup]="formPhoneGroup">
+            <!-- <ng-template matStepLabel>Name</ng-template> -->
+            <div class="example-form">
+              <mat-form-field class="example-full-width">
+                <input type="tel" matInput placeholder="Mobile" required formControlName="mobile">
+                <mat-error *ngIf="formPhoneGroup.controls['mobile'].hasError('required')">
+                        Mobile is required!
+                    </mat-error>
+                 <mat-error *ngIf="formPhoneGroup.controls['mobile'].hasError('min')">
+                        Mobile No is Wrong!
+                    </mat-error>
+              </mat-form-field>
+            </div>
+            <br/>
+            <button mat-raised-button color="primary" matStepperPrevious>Back</button> &nbsp; &nbsp;
+            <button mat-raised-button color="primary" matStepperNext>Next</button>
+        </form>
     </div>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>Review</ng-template>
+    <h5>You are now done.</h5>
+    <div>
+        <button mat-raised-button color="primary" matStepperPrevious>Back</button> &nbsp; &nbsp;
+        <button mat-raised-button color="accent" type="submit">Submit</button> &nbsp; &nbsp;
+        <button mat-raised-button color="warn" (click)="stepper.reset()">Reset</button>
+    </div>
+  </mat-step>
+<!-- <ng-template matStepperIcon="phone">
+    <mat-icon>phone</mat-icon>
+</ng-template> -->
 
-</div>
-
+</mat-horizontal-stepper>
