--- a/src/app/module-curriculo/components/targeta/lateral/lateral.component.css
+++ b/src/app/module-curriculo/components/targeta/lateral/lateral.component.css
@@ -13,7 +13,7 @@
   flex-wrap: wrap;
   flex-basis: 25%;
   text-align: center;
-  background-color: #1F497D;  
+  background-color: #e02f87;  
   color: #FFF;
   border: 1px solid #000;
   border-right: 0;
