--- a/src/app/module-curriculo/pages/agregar/agregar.component.css
+++ b/src/app/module-curriculo/pages/agregar/agregar.component.css
@@ -36,4 +36,13 @@
   .example-chip-list {
     width: 90%;
   }
+
+  .container-corto{
+    margin-left: 8px;
+    width: 15%;
+  }
+  .container-largo{
+    margin-left: 8px;
+    width: 30%;
+  }
   
