--- a/src/app/module-curriculo/pages/agregar/agregar.component.html
+++ b/src/app/module-curriculo/pages/agregar/agregar.component.html
@@ -66,28 +66,71 @@
     <div style="padding-top: 3%;">
         <form [formGroup]="formFormacionGroup">
             <!-- <ng-template matStepLabel>Name</ng-template> -->
-            <div class="example-form">
-
-              <div >
-
-                <mat-form-field class="container-corto" hintLabel="Solo Números" appearance="fill">
-                  <mat-label>Años </mat-label>
-                  <input matInput #input maxlength="9" placeholder="Desde - Hasta">
-                  <mat-hint align="end">{{input.value?.length }}</mat-hint>
-                </mat-form-field>
               
-                <mat-form-field class="container-largo" appearance="fill">
-                  <mat-label>Seleccione el centro de estudio</mat-label>
-                  <mat-select>
-                    <mat-option value="option">Centro de estudios</mat-option>
-                  </mat-select>
-                </mat-form-field>
+                  <!-- <button type="button" class="px-5 py-3 flex-grow not-touch:hover:opacity-75 text-start overflow-hidden"><h4 class="font-bold text-gray-800 truncate" style="direction: ltr;">[Formación]</h4>
+                  </button>
+                  <div class="py-5 pe-5 whitespace-nowrap">
+                    <button class="inline-flex border items-center justify-center rounded-button cursor-pointer relative box-content transition-colors duration-150 overflow-hidden max-w-full focus-visible:ring-4 ring-brand bg-transparent active:bg-brand-100 not-touch:active:bg-brand-100 text-gray-700 border-gray-400 not-touch:hover:bg-brand-50 not-touch:hover:border-brand-400 font-medium py-1 ps-1 pe-1 text-base" type="button" style="outline: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="px-0.5 flex-shrink-0 box-content h-6 w-5"><path d="M13.586 3.586a2 2 0 1 1 2.828 2.828l-.793.793-2.828-2.828.793-.793zm-2.207 2.207L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"></path></svg><span class="sr-only">Editar</span>
+                    </button>
+                  </div> -->
+                  <mat-accordion class="example-headers-align">
 
-                <mat-form-field class="container-largo" hintLabel="Título Obtenido" appearance="fill">
-                  <mat-label>Escriba </mat-label>
-                  <input matInput #input placeholder="Escriba">
-                  <mat-hint align="end"></mat-hint>
-                </mat-form-field>
+                    <mat-expansion-panel class="example-headers-align" [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                          Formación Obtenida
+                        </mat-panel-title>
+                        <mat-panel-description>
+                          Escriba los datos de la formación obtenida
+                          <mat-icon>map</mat-icon>
+                        </mat-panel-description>
+                      </mat-expansion-panel-header>
+
+                      <mat-form-field class="container-largo" 
+                                      appearance="fill">
+                        <mat-label>Formación </mat-label>
+                        <input matInput #input placeholder="Escriba">
+                        <mat-hint align="end"></mat-hint>
+                      </mat-form-field>  
+                      
+                      <mat-form-field class="container-largo" appearance="fill">
+                        <mat-label>Centro de estudio</mat-label>
+                        <mat-select>
+                          <mat-option value="option">Centro de estudios</mat-option>
+                        </mat-select>
+                      </mat-form-field>
+                      <mat-divider></mat-divider>
+                      <mat-label>
+                        Fecha de Inicio
+                      </mat-label>
+                      
+                      <mat-form-field class="container-corto" appearance="fill">
+                        <mat-label>Fecha </mat-label>
+                        <input matInput #input maxlength="9" placeholder="- Desde -">
+                        <mat-hint align="end">
+
+                        </mat-hint>
+                      </mat-form-field>
+
+                      <mat-label>
+                        Fecha de Fin
+                      </mat-label>
+                      
+                      <mat-form-field class="container-corto" appearance="fill">
+                        <mat-label>Fecha </mat-label>
+                        <input matInput #input maxlength="9" placeholder="- Hasta -">
+                        <mat-hint align="end">
+
+                        </mat-hint>
+                      </mat-form-field>
+  
+                      <mat-action-row>
+                        <button mat-button color="primary" (click)="nextStep()">Completado</button>
+                      </mat-action-row>
+                    </mat-expansion-panel>
+
+                  </mat-accordion>              
+              <div >
 
               </div>
 
@@ -97,7 +140,6 @@
                         Formación requerida!
                     </mat-error>
               </mat-form-field> -->
-            </div>
             <br/>
             <button mat-raised-button color="primary" matStepperPrevious>Back</button> &nbsp; &nbsp;
             <button mat-raised-button color="primary" matStepperNext>Next</button>
@@ -127,7 +169,7 @@
     </div>
   </mat-step>
 
-  <mat-step [stepControl]="formPhoneGroup" label="Contactos" >
+  <mat-step [stepControl]="formPhoneGroup" label="Habilidades profecionales" >
     <div style="padding-top: 3%;">
         <form [formGroup]="formPhoneGroup">
             <!-- <ng-template matStepLabel>Name</ng-template> -->
@@ -149,7 +191,7 @@
     </div>
   </mat-step>
   <mat-step>
-    <ng-template matStepLabel>Review</ng-template>
+    <ng-template matStepLabel>Contactos</ng-template>
     <h5>You are now done.</h5>
     <div>
         <button mat-raised-button color="primary" matStepperPrevious>Back</button> &nbsp; &nbsp;
