--- a/src/app/module-curriculo/pages/agregar/agregar.component.css
+++ b/src/app/module-curriculo/pages/agregar/agregar.component.css
@@ -44,5 +44,25 @@
   .container-largo{
     margin-left: 8px;
     width: 30%;
-  }
-  
+  }  
+
+.items-stretch {
+  align-items: stretch;
+}
+
+.w-full {
+  width: 100%;
+}
+.flex {
+  display: flex;
+}
+
+/* .example-headers-align .mat-expansion-panel-header-description {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.example-headers-align .mat-form-field + .mat-form-field {
+  margin-left: 8px;
+  margin-right: 8px;
+} */
